# Kenn_Zenn_Publisher

./: .devcontainer.json  .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ruff.yml
backend/: .gitignore  Dockerfile  entrypoint.sh  main.py
backend/agents/: suggestion_agent.py  web_search_agent.py
backend/core/: database.py  logger.py  settings.py
backend/exceptions/: exceptions.py
backend/models/: __init__.py  session_model.py
backend/routers/: generate.py  publish.py  suggest.py
backend/schemas/: assistant_schemas.py  generate_schema.py  publish_schemas.py
backend/services/: file_service.py  generate_service.py  publish_service.py  suggest_service.py  zenn_service.py
backend/session/: session_manager.py
backend/test/: test_1.json
backend/zenn/: file_service.py  generate.py  generate_service.py  publish.py  publish_service.py  zenn_article_schemas.py  zenn_service.py
docs/ToDo/: todo.md
docs/code-review/: 2025-12-24-codebase-review.md  README.md  action-items.md
docs/integration-design/: 01_project_overview.md  02_integration_approaches.md  03_directory_structure.md  04_api_design.md  05_implementation_plan.md  05_implementation_plan_detailed.md
docs/learnings/: docker-secrets-with-pydantic.md  sqlalchemy-orm-basics.md
