[project]
name = "kenn-zenn-publisher"
version = "0.1.0"
description = "Zenn article publisher backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "pydantic-settings>=2.12.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "ruff==0.14.8",
    "pre-commit==4.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"